[package]
name = "my_rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build]
target = "x86_64-apple-darwin"


[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
rand = "0.8.4"

